# codex-compaction-viewer

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: quality.yml  release.yml
badges/: coverage.json
scripts/: install.sh  test-quality.sh
src/: cli.rs  lib.rs  main.rs  parser.rs  tui.rs
src/codex_compaction_viewer/: __init__.py  cli.py  parser.py
tests/: cli.rs  cli_internal.rs  install_release_only.sh  parser.rs  test_cli.py  test_parser.py  tui.rs  tui_internal.rs
