[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-compaction-viewer"
version = "0.1.0"
description = "Inspect Codex JSONL sessions for context summaries, token usage, and truncation signals."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alex Zhang" }]
keywords = ["codex", "jsonl", "compaction", "viewer"]
dependencies = []

[project.scripts]
cxv = "codex_compaction_viewer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

